@@ -6,74 +6,6 @@ import traceback
 import types
 import warnings
 
-def all(seq, pred=None):
-    """Is ``pred(elm)`` true for all elements?
-
-    With the default predicate, this is the same as Python 2.5's ``all()``
-    function; i.e., it returns true if all elements are true.
-
-    >>> all(["A", "B"])
-    True
-    >>> all(["A", ""])
-    False
-    >>> all(["", ""])
-    False
-    >>> all(["A", "B", "C"], lambda x: x <= "C")
-    True
-    >>> all(["A", "B", "C"], lambda x: x < "C")
-    False
-
-    From recipe in itertools docs.
-    """
-    for elm in itertools.ifilterfalse(pred, seq):
-        return False
-    return True
-
-def any(seq, pred=None):
-    """Is ``pred(elm)`` is true for any element?
-
-    With the default predicate, this is the same as Python 2.5's ``any()``
-    function; i.e., it returns true if any element is true.
-
-    >>> any(["A", "B"])
-    True
-    >>> any(["A", ""])
-    True
-    >>> any(["", ""])
-    False
-    >>> any(["A", "B", "C"], lambda x: x <= "C")
-    True
-    >>> any(["A", "B", "C"], lambda x: x < "C")
-    True
-
-    From recipe in itertools docs.
-    """
-    for elm in itertools.ifilter(pred, seq):
-        return True
-    return False
-
-def no(seq, pred=None):
-    """Is ``pred(elm)`` false for all elements?
-
-    With the default predicate, this returns true if all elements are false.
-
-    >>> no(["A", "B"])
-    False
-    >>> no(["A", ""])
-    False
-    >>> no(["", ""])
-    True
-    >>> no(["A", "B", "C"], lambda x: x <= "C")
-    False
-    >>> no(["X", "Y", "Z"], lambda x: x <="C")
-    True
-
-    From recipe in itertools docs.
-    """
-    for elm in itertools.ifilter(pred, seq):
-        return False
-    return True
-
 def count_true(seq, pred=lambda x: x):
     """How many elements is ``pred(elm)`` true for?
 
